Many project build, dependency, compile, CI updates (#160)